@@ -9,6 +9,7 @@ pts-core: Add PRESET_OPTIONS_VALUES environment variable that is similar to PRES
 phodevi: Improved Radeon AMDGPU frequency detection/reporting
 phodevi: Add support for reading GPU usage sensor with AMDGPU gpu_busy_percent sysfs interface
 phodevi: Updated gpu_voltage sensor for AMDGPU driver
+phodevi: Updated gpu_power sensor for AMDGPU driver
 
 Phoronix Test Suite 8.4.0-Skiptvet
 26 November 2018
